<resources>
    <string name="app_name">SmsWakeUp</string>
    <string name="MainActivity_name">Sms WakeUp</string>
    <string name="WakeUpActivity_name">Wake up!!!</string>

    <string name="SvegliaBambocci">Sveglia immediatamente qualcuno!!!</string>
    <string name="msgTitleSvegliaBambocci">Inserisci il numero</string>

    <string name="sms_sent">Messaggio inviato</string>
    <string name="sms_notSent">Messaggio non inviato</string>
    <string name="sms_genericError">Errore nell\'invio</string>
    <string name="sms_noService">Nessun servizio</string>
    <string name="sms_noPDU">PDU inesistente</string>
    <string name="sms_noRadio">Connettività telefonica assente</string>
    <string name="sms_delivered">Messaggio consegnato</string>
    <string name="sms_notDelivered">Impossibile consegnare il messaggio</string>
    <string name="sms_unknownStatus">"Non so cosa è accaduto all\'sms"</string>

    <string name="dialog_OK">Ok</string>
    <string name="dialog_Cancel">Annulla</string>

    <string name="msgBody">Per farmi svegliare devi mandarmi il messaggio chiave:</string>
    <string name="msgWakeUp">Svegliati non riesco a trovarti!!!</string>

    <string name="callNumber">Inviato da questo numero di telefono:</string>
    <string name="msgFromNumber">1234567890</string>

    <string name="btnStopSoundLabel">Ferma il suono e chiudi</string>
    <string name="btnAttivaReceiver">Attiva</string>
    <string name="btnDisattivaReceiver">Disattiva</string>

    <string name="msgBodylabek">Messaggio ricevuto:</string>

    <string name="action_about">Informazioni</string>
    <string name="action_settings">Impostazioni</string>

    <string name="Autore">Gabriele Galluzzo</string>
    <string name="descrizione">SmsWakeUp è un applicazione che permette di trovare il cellulare perso mandando un sms.\n Il cellulare inizierà a suonare al massimo volume.</string>
    <string name="cboxMsgBodyChange">Cambia il messaggio da ricevere</string>
    <string name="cboxMsgNumber">Cambia numero</string>
    <string name="txtLockNumber">Attivazione solo se il messaggio proviene dal numero noto</string>
    <string name="txtNumeroNoto">Numero noto</string>

    <string name="shared_msgBody">msgBody</string>
    <string name="shared_msgFromNumber">msgFromNumber</string>
    <string name="shared_wakeUpOnlyFromNumber">wakeUpOnlyFromNumber</string>
    <string name="shared_logActionsToFile">logActionsToFile</string>
    <string name="shared_secsWait_name">secsWait</string>
    <string name="shared_secsWait">5</string>

    <string name="txtSecondsWait">Secondi di attesa prima di suonare</string>

    <string name="warning_numberLock">Se non specifichi un numero noto, il telefono può essere svegliato da chiunque ti invii il messaggio chiave.</string>
    <string name="txtRitardo">Tempo di attivazione (sec)</string>

    <string name="notification_Title">Wake up!!! Ti stanno cercando</string>
    <string name="notification_Ticker">Svegliati</string>
    <string name="notification_Text">Ti stanno cercando</string>
    <string name="notification_SubText">Suono al massimo</string>

    <string name="intent_AggiornaInterfaccia">com.example.utente.SmsWakeUp.AggiornaInterfaccia</string>

    <string name="pref_sync">Vincolo sul mittente</string>
    <string name="pref_sync_summ">Mi sveglio solo se il messaggio viene dal numero selezionato</string>

    <string name="pref_body">Messaggio chiave</string>
    <string name="pref_body_summ">Messaggio per farmi svegliare</string>

    <string name="pref_number">Numero mittente</string>
    <string name="pref_number_summ">Mittente da cui posso accettare di essere svegliato</string>

    <string name="pref_secsWait">Tempo di attesa</string>
    <string name="pref_secsWait_summ">Tempo che aspetto prima di svegliarmi</string>
    <string name="pref_title_activity_settings">Secondi di attesa prima di suonare</string>

    <string name="pref_log_on_file">Log su file</string>
    <string name="pref_log_on_file_summ">Log su file degli eventi dell\'applicazione</string>

    <string name="Si">Si</string>
    <string name="No">No</string>

</resources>
