<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.utente.smswakeup.MainActivity"
    android:clickable="true"
    android:focusableInTouchMode="true" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgBody"
        android:id="@+id/txtView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:textSize="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Deregistra"
        android:id="@+id/button2"
        android:visibility="invisible"
        android:layout_alignTop="@+id/toggleButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAttivaReceiver"
        android:id="@+id/toggleButton"
        android:onClick="registerDeregisterReceiver"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cboxLockNumber"
        android:id="@+id/cboxLockNumber"
        android:checked="false"
        android:clickable="false"
        android:onClick="cboxMsgLockToggle"
        android:layout_below="@+id/space"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/msgWakeUp"
            android:id="@+id/textView"
            android:textSize="36sp"
            android:gravity="center_horizontal"

            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/roundedrect"
            android:onClick="txtChangeMsgWakeUp"
            android:visibility="visible"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"

            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ok"
            android:id="@+id/btnAcceptMsgBody"
            android:layout_gravity="center_horizontal|bottom"
            android:onClick="btnChangeMsgWakeUp"
            android:visibility="gone"
            android:layout_below="@+id/editText"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout2"
        android:layout_below="@+id/cboxLockNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNumeroNoto"
            android:id="@+id/textView6"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/msgFromNumber"
            android:id="@+id/textView3"
            android:textSize="36sp"
            android:gravity="center_horizontal"
            android:background="@drawable/roundedrect"
            android:onClick="txtChangeNumberWakeUp"
            android:layout_below="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"

            android:visibility="gone"
            android:layout_below="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="phone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ok"
            android:id="@+id/btnAcceptNumberBody"
            android:layout_gravity="center_horizontal|bottom"
            android:onClick="btnChangeNumberWakeUp"
            android:visibility="gone"
            android:layout_below="@+id/editText2"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSecondsWait"
            android:id="@+id/textView2"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="83dp"
            android:id="@+id/numberPicker"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <Space
        android:layout_width="20px"
        android:layout_height="50dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:id="@+id/space" />

    <Space
        android:layout_width="20px"
        android:layout_height="20dp"
        android:id="@+id/space4"
        android:layout_below="@+id/relativeLayout2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stop suono"
        android:id="@+id/btnStopSoundService"
        android:layout_alignBottom="@+id/button2"
        android:layout_centerHorizontal="true"
        android:onClick="btnStopSoundService" />

</RelativeLayout>
